Use maven-model & maven-model-builder instead of custom class. The project is unmodularized as side effect.